tests/machine/x/hs/dataset_where_filter.error

tests/machine/x/hs/dataset_where_filter.hs:181:90: error:
    • Couldn't match type ‘AnyValue’ with ‘[Char]’
      Expected: Map.Map String String
        Actual: Map.Map String AnyValue
    • In the second argument of ‘Map.lookup’, namely ‘person’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "name" person)’
      In the first argument of ‘VString’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "name" person))’
    |
181 | adults = [Map.fromList [("name", VString (fromMaybe (error "missing") (Map.lookup "name" person))), ("age", VString (fromMaybe (error "missing") (Map.lookup "age" person))), ("is_senior", VBool ((fromMaybe (error "missing") (Map.lookup "age" person) >= 60)))] | person <- filter (\person -> (fromMaybe (error "missing") (Map.lookup "age" person) >= 18)) people]
    |                                                                                          ^^^^^^

tests/machine/x/hs/dataset_where_filter.hs:181:164: error:
    • Couldn't match type ‘AnyValue’ with ‘[Char]’
      Expected: Map.Map String String
        Actual: Map.Map String AnyValue
    • In the second argument of ‘Map.lookup’, namely ‘person’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "age" person)’
      In the first argument of ‘VString’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "age" person))’
    |
181 | adults = [Map.fromList [("name", VString (fromMaybe (error "missing") (Map.lookup "name" person))), ("age", VString (fromMaybe (error "missing") (Map.lookup "age" person))), ("is_senior", VBool ((fromMaybe (error "missing") (Map.lookup "age" person) >= 60)))] | person <- filter (\person -> (fromMaybe (error "missing") (Map.lookup "age" person) >= 18)) people]
    |                                                                                                                                                                    ^^^^^^
